add submit button and change background color

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -26,12 +26,20 @@
         </div>
       </section>
 
-      <section class="section has-background-grey-lighter">
+      <section class="section has-background-white-ter">
         <h1 class="title has-text-grey-dark">Credentials</h1>
-        <h2 class="subtitle">
+        <label class="label">
           Enter your <a href="https://platform.openai.com/account/api-keys">OpenAI API key</a> to get started:
-        </h2>
-        <input class="input" type="text" placeholder="Enter your API key" />
+        </label>
+
+        <div class="field has-addons">
+          <div class="control">
+            <input class="input" type="text" placeholder="Enter your API key" />
+          </div>
+          <div class="control">
+            <a class="button is-info"> Submit </a>
+          </div>
+        </div>
 
         <div class="content mt-5 has-text-weight-light">
           <p>
