Save the user's api key in a global variable

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -33,11 +33,12 @@
         </label>
 
         <div class="field has-addons">
-          <div class="control">
-            <input class="input" type="text" placeholder="Enter your API key" />
+          <div id="control-api-input" class="control has-icons-right">
+            <input id="api-key" class="input" type="text" placeholder="Enter your API key" />
           </div>
+
           <div class="control">
-            <a class="button is-info"> Submit </a>
+            <a class="button is-info" id="api-key-button"> Submit </a>
           </div>
         </div>
 
