--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -32,7 +32,7 @@
           Enter your <a href="https://platform.openai.com/account/api-keys">OpenAI API key</a> to get started:
         </label>
 
-        <div class="field has-addons">
+        <div id="api-input-field" class="field has-addons">
           <div id="control-api-input" class="control has-icons-right">
             <input id="api-key" class="input" type="text" placeholder="Enter your API key" />
           </div>
