Add new logo image

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -18,14 +18,13 @@
   </head>
 
   <body>
+    <section class="hero is-info is-small">
+      <div class="hero-body">
+        <p class="title">WordsmithBot</p>
+        <p class="subtitle">Your AI Writing Assistant</p>
+      </div>
+    </section>
     <div id="login-section">
-      <section class="hero is-info is-medium">
-        <div class="hero-body">
-          <p class="title">WordsmithBot</p>
-          <p class="subtitle">Your AI Writing Assistant</p>
-        </div>
-      </section>
-
       <section class="section has-background-white-ter">
         <h1 class="title has-text-grey-dark">Credentials</h1>
         <label class="label">
