Hide login screen and show main-screen after verifying API key

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -24,7 +24,7 @@
         <p class="subtitle">Your AI Writing Assistant</p>
       </div>
     </section>
-    <div id="login-section">
+    <div id="login-screen">
       <section class="section has-background-white-ter">
         <h1 class="title has-text-grey-dark">Credentials</h1>
         <label class="label">
@@ -67,6 +67,6 @@
       </section>
     </div>
 
-    <main id="app-body" style="display: none"></main>
+    <div id="main-screen" style="display: none"></div>
   </body>
 </html>
