--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -71,12 +71,13 @@
       <section id="selection-textbox" class="section pb-0">
         <h1 class="title">Context input</h1>
         <textarea
+          id="inputTextArea"
           class="textarea is-large is-size-5"
           placeholder="WordsmithBot generates continuations based on your input. To get started, either select the text you want to use as context or copy and paste something into this field. Then, click the 'Suggest Text' button to see the generated continuations.."
         ></textarea>
         <nav class="level">
           <div class="level-item has-text-centered">
-            <button class="button is-info mt-4">Sugggest Text</button>
+            <button id="suggest-text-button" class="button is-info mt-4">Sugggest Text</button>
           </div>
         </nav>
       </section>
