Change the number of generated options

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -75,9 +75,23 @@
           class="textarea is-large is-size-5"
           placeholder="WordsmithBot generates continuations based on your input. To get started, either select the text you want to use as context or copy and paste something into this field. Then, click the 'Suggest Text' button to see the generated continuations.."
         ></textarea>
-        <nav class="level">
-          <div class="level-item has-text-centered">
-            <button id="suggest-text-button" class="button is-info mt-4">Sugggest Text</button>
+        <nav class="level is-mobile mt-4">
+          <div class="level-left">
+            <div class="level-item has-text-centered">
+              <button id="suggest-text-button" class="button is-info is-small">Sugggest Text</button>
+            </div>
+
+            <div class="level-item">
+              <div class="select is-small">
+                <select id="options-select">
+                  <!-- add options, defualt 3, also add 1, 5 9 -->
+                  <option value="3">Options(defualt:3)</option>
+                  <option value="1">1 Option</option>
+                  <option value="5">5 Options</option>
+                  <option value="9">9 Options</option>
+                </select>
+              </div>
+            </div>
           </div>
         </nav>
       </section>
@@ -90,10 +104,6 @@
         <textarea id="option 2" class="textarea" readonly placeholder="The generations will appear here."></textarea>
         <p class="subtitle mt-2">Option 3:</p>
         <textarea id="option 3" class="textarea" readonly placeholder="The generations will appear here."></textarea>
-        <p class="subtitle mt-2">Option 4:</p>
-        <textarea id="option 4" class="textarea" readonly placeholder="The generations will appear here."></textarea>
-        <p class="subtitle mt-2">Option 5:</p>
-        <textarea id="option 5" class="textarea" readonly placeholder="The generations will appear here."></textarea>
       </section>
     </div>
   </body>
