Change add-in name and remove title banner from main screen

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -18,13 +18,13 @@
   </head>
 
   <body>
-    <section class="hero is-info is-small">
-      <div class="hero-body">
-        <p class="title">WordsmithBot</p>
-        <p class="subtitle">Your AI Writing Assistant</p>
-      </div>
-    </section>
     <div id="login-screen">
+      <section class="hero is-info is-small">
+        <div class="hero-body">
+          <p class="title">Writing Wizard</p>
+          <p class="subtitle">Your AI Writing Assistant</p>
+        </div>
+      </section>
       <section class="section has-background-white-ter">
         <h1 class="title has-text-grey-dark">Credentials</h1>
         <label class="label">
@@ -73,7 +73,7 @@
         <textarea
           id="inputTextArea"
           class="textarea is-large is-size-5"
-          placeholder="WordsmithBot generates continuations based on your input. To get started, either select the text you want to use as context or copy and paste something into this field. Then, click the 'Suggest Text' button to see the generated continuations.."
+          placeholder="Writing Wizard generates continuations based on your input. To get started, either select the text you want to use as context or copy and paste something into this field. Then, click the 'Suggest Text' button to see the generated continuations.."
         ></textarea>
         <nav class="level is-mobile mt-4">
           <div class="level-left">
