[CSS] Ensure full coverage of grey background on login and main screens

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -18,14 +18,14 @@
   </head>
 
   <body>
-    <div id="login-screen">
+    <div id="login-screen" class="has-background-white-ter">
       <section class="hero is-info is-small">
         <div class="hero-body">
           <p class="title">Writing Wizard</p>
           <p class="subtitle">Your AI Writing Assistant</p>
         </div>
       </section>
-      <section class="section has-background-white-ter">
+      <section class="section">
         <h1 class="title has-text-grey-dark">Credentials</h1>
         <label class="label">
           Enter your <a href="https://platform.openai.com/account/api-keys">OpenAI API key</a> to get started:
