--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -98,6 +98,37 @@
 
       <section id="generations" class="section mt-0">
         <h2 class="title pb-1">Suggestions</h2>
+        <!-- Main container -->
+        <nav class="level is-mobile">
+          <!-- Left side -->
+          <div class="level-left">
+            <div class="level-item">
+              <!-- Carousel-like component -->
+              <div class="carousel">
+                <button class="button is-info is-rounded is-small">
+                  <span class="icon is-small">
+                    <span class="icon-chevron-left"></span>
+                  </span>
+                </button>
+                <span class="carousel-option">Option 1</span>
+                <button class="button is-info is-rounded is-small">
+                  <span class="icon is-small">
+                    <span class="icon-chevron-right"></span>
+                  </span>
+                </button>
+              </div>
+            </div>
+            <div class="level-item">
+              <!-- Remove button -->
+              <button class="button is-info is-small">Remove</button>
+            </div>
+          </div>
+
+          <!-- Right side -->
+          <div class="level-right">
+            <!-- Add other level-items here, if needed -->
+          </div>
+        </nav>
       </section>
     </div>
   </body>
