--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -97,7 +97,7 @@
       </section>
 
       <section id="generations" class="section mt-0">
-        <h2 class="title pb-1">Suggestions</h2>
+        <h2 class="title">Suggestions</h2>
         <!-- Main container -->
         <nav class="level is-mobile">
           <!-- Left side -->
