Cycle between options

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -105,13 +105,13 @@
             <div class="level-item">
               <!-- Carousel-like component -->
               <div class="carousel">
-                <button class="button is-info is-rounded is-small">
+                <button class="button is-info is-rounded is-small" id="prevButton">
                   <span class="icon is-small">
                     <span class="icon-chevron-left"></span>
                   </span>
                 </button>
-                <span class="carousel-option">Option 1</span>
-                <button class="button is-info is-rounded is-small">
+                <span class="carousel-option" id="currentOption">Option 1</span>
+                <button class="button is-info is-rounded is-small" id="nextButton">
                   <span class="icon is-small">
                     <span class="icon-chevron-right"></span>
                   </span>
