Insert text when cycling through options

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -110,7 +110,7 @@
                     <span class="icon-chevron-left"></span>
                   </span>
                 </button>
-                <span class="carousel-option" id="currentOption">Option 1</span>
+                <span class="carousel-option" id="carousel-option">Option 1</span>
                 <button class="button is-info is-rounded is-small" id="nextButton">
                   <span class="icon is-small">
                     <span class="icon-chevron-right"></span>
