--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -120,7 +120,7 @@
             </div>
             <div class="level-item">
               <!-- Remove button -->
-              <button class="button is-info is-small">Remove</button>
+              <button class="button is-info is-small" id="remove-option-button">Remove</button>
             </div>
           </div>
 
