Add a tickbox to highlight inserted option

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -85,7 +85,7 @@
               <div class="select is-small">
                 <select id="options-select">
                   <!-- add options, defualt 3, also add 1, 5 9 -->
-                  <option value="3">Options(defualt:3)</option>
+                  <option value="3">Options (defualt:3)</option>
                   <option value="1">1 Option</option>
                   <option value="5">5 Options</option>
                   <option value="9">9 Options</option>
@@ -129,6 +129,10 @@
             <!-- Add other level-items here, if needed -->
           </div>
         </nav>
+        <label class="checkbox">
+          <input type="checkbox" id="highlight-option-checkbox" />
+          Highlight Option
+        </label>
       </section>
     </div>
   </body>
