Add error message when suggest text fails

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -75,7 +75,7 @@
           class="textarea is-large is-size-5"
           placeholder="Writing Wizard generates continuations based on your input. To get started, either select the text you want to use as context or copy and paste something into this field. Then, click the 'Suggest Text' button to see the generated continuations.."
         ></textarea>
-        <nav class="level is-mobile mt-4">
+        <nav id="suggest-text-nav" class="level is-mobile mt-4">
           <div class="level-left">
             <div class="level-item has-text-centered">
               <button id="suggest-text-button" class="button is-info is-small">Sugggest Text</button>
