edit input context textarea's placeholder

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -78,7 +78,7 @@
           id="inputTextArea"
           class="textarea is-large is-size-5"
           readonly="true"
-          placeholder="Writing Wizard generates continuations based on your input. To get started, select the text you want to use as context. Then, click the 'Suggest Text' button to see the generated continuations.."
+          placeholder="Writing Wizard generates continuations based on your input. To get started, select the text you want to use as context, and click the 'Suggest Text' button to view the generated continuations."
         ></textarea>
 
         <nav id="suggest-text-nav" class="level is-mobile mt-4">
