Remove url links because they cannot be embded on the web

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -27,9 +27,7 @@
       </section>
       <section class="section">
         <h1 class="title has-text-grey-dark">Credentials</h1>
-        <label class="label">
-          Enter your <a href="https://platform.openai.com/account/api-keys">OpenAI API key</a> to get started:
-        </label>
+        <label class="label"> Enter your OpenAI API key to get started: </label>
 
         <div id="api-input-field" class="field has-addons">
           <div id="control-api-input" class="control has-icons-right">
@@ -61,11 +59,6 @@
           <p class="mt-0 has-text-weight-bold">
             Please monitor your usage and costs through your OpenAI account dashboard, and set up alerts to notify you
             when certain usage or cost thresholds are reached.
-          </p>
-
-          <p class="mt-0">
-            For more information about the pricing model, please refer to the
-            <a href="https://openai.com/blog/openai-api/">OpenAI API documentation</a>.
           </p>
         </div>
       </section>
