Change word-in name

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Writing Wizard</title>
+    <title>ScribbleMate</title>
 
     <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
@@ -21,7 +21,7 @@
     <div id="login-screen" class="has-background-white-ter">
       <section class="hero is-info is-small">
         <div class="hero-body">
-          <p class="title">Writing Wizard</p>
+          <p class="title">ScribbleMate</p>
           <p class="subtitle">Your AI Writing Assistant</p>
         </div>
       </section>
@@ -71,7 +71,7 @@
           id="inputTextArea"
           class="textarea is-large is-size-5"
           readonly="true"
-          placeholder="Writing Wizard generates continuations based on your input. To get started, select the text you want to use as context, and click the 'Suggest Text' button to view the generated continuations."
+          placeholder="ScribbleMate generates continuations based on your input. To get started, select the text you want to use as context, and click the 'Suggest Text' button to view the generated continuations."
         ></textarea>
 
         <nav id="suggest-text-nav" class="level is-mobile mt-4">
