--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -88,6 +88,7 @@
                   <option value="1">1 Option</option>
                   <option value="5">5 Options</option>
                   <option value="9">9 Options</option>
+                  <option value="12">12 Options</option>
                 </select>
               </div>
             </div>
