Add a model selector menu

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -94,6 +94,19 @@
             </div>
           </div>
         </nav>
+
+        <nav id="model-text-nav" class="level is-mobile mt-4">
+          <div class="level-left">
+            <div class="level-item">
+              <div class="select is-small">
+                <select id="model-select">
+                  <option value="gpt-3.5-turbo-0301">gpt-3.5-turbo-0301</option>
+                  <option value="gpt-3.5-turbo-0125">gpt-3.5-turbo-0125</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </nav>
       </section>
 
       <section id="generations" class="section mt-0">
