--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -102,6 +102,7 @@
                 <select id="model-select">
                   <option value="gpt-3.5-turbo-0301">gpt-3.5-turbo-0301</option>
                   <option value="gpt-3.5-turbo-0125">gpt-3.5-turbo-0125</option>
+                  <option value="gpt-4o-2024-05-13">gpt-4o-2024-05-13</option>
                 </select>
               </div>
             </div>
