Add new model option

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -107,6 +107,7 @@
                   </option>
                   <option value="Model:gpt-3.5-turbo-0125 System Message:Default">gpt-3.5-turbo-0125</option>
                   <option value="Model:gpt-4o-2024-05-13 System Message:Default">gpt-4o-2024-05-13</option>
+                  <option value="Model:gpt-4o-mini-2024-07-18 System Message:Default">gpt-4o-mini-2024-07-18</option>
                 </select>
               </div>
             </div>
