--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -100,13 +100,16 @@
             <div class="level-item">
               <div class="select is-small">
                 <select id="model-select">
-                  <option
-                    value="Model:gpt-3.5-turbo-0301 System Message:You are an AI writing assistant for a novelist. Your goal is to use creative and descriptive language to complete the provided text without introducing new plot points or dialogue. Your writing should be sophisticated and adult-oriented, dealing with mature topics and avoiding cliches. Your responses should enhance the writer's original vision, providing vivid, concrete details of the setting and characters in the style of J.K. Rowling. Ensure that your responses remain within the same paragraph as the provided text, and avoid introducing new characters or events that are not directly related to the provided idea."
-                  >
-                    gpt-3.5-turbo-0301
-                  </option>
-                  <option value="Model:gpt-3.5-turbo-0125 System Message:Default">gpt-3.5-turbo-0125</option>
+                  <option value="Model:gpt-4o-2024-08-06 System Message:Default">gpt-4o-2024-08-06</option>
                   <option value="Model:gpt-4o-2024-05-13 System Message:Default">gpt-4o-2024-05-13</option>
+                  <option value="ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-7:A0X18JAC System Message:Default">
+                    fiction-writing-7
+                  </option>
+                  <option
+                    value="Model:ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-4:9y3ECqcG System Message:Default"
+                  >
+                    fiction-writing-4
+                  </option>
                   <option value="Model:gpt-4o-mini-2024-07-18 System Message:Default">gpt-4o-mini-2024-07-18</option>
                 </select>
               </div>
