Update models list

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -100,6 +100,7 @@
             <div class="level-item">
               <div class="select is-small">
                 <select id="model-select">
+                  <option value="Model:gpt-4o-2024-11-20 System Message:Default">gpt-4o-2024-11-20</option>
                   <option value="Model:gpt-4o-2024-08-06 System Message:Default">gpt-4o-2024-08-06</option>
                   <option value="Model:gpt-4o-2024-05-13 System Message:Default">gpt-4o-2024-05-13</option>
                   <option value="ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-7:A0X18JAC System Message:Default">
