add support for gemini models

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -39,10 +39,10 @@
         </div>
 
         <div class="field">
-          <label class="label">Deepseek API Key:</label>
-          <div id="deepseek-input-field" class="field has-addons">
-            <div id="control-deepseek-input" class="control has-icons-right">
-              <input id="deepseek-key" class="input" type="text" placeholder="Enter your Deepseek API key" />
+          <label class="label">Gemini API Key:</label>
+          <div id="gemini-input-field" class="field has-addons">
+            <div id="control-gemini-input" class="control has-icons-right">
+              <input id="gemini-key" class="input" type="text" placeholder="Enter your Gemini API key" />
             </div>
           </div>
         </div>
@@ -117,14 +117,22 @@
                   <option value="Model:gpt-4o-2024-11-20 API:openai System Message:Default">gpt-4o-2024-11-20</option>
                   <option value="Model:gpt-4o-2024-08-06 API:openai System Message:Default">gpt-4o-2024-08-06</option>
                   <option value="Model:gpt-4o-2024-05-13 API:openai System Message:Default">gpt-4o-2024-05-13</option>
-                  <option value="Model:ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-7:A0X18JAC API:openai System Message:Default">
+                  <option
+                    value="Model:ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-7:A0X18JAC API:openai System Message:Default"
+                  >
                     fiction-writing-7
                   </option>
-                  <option value="Model:ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-4:9y3ECqcG API:openai System Message:Default">
+                  <option
+                    value="Model:ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-4:9y3ECqcG API:openai System Message:Default"
+                  >
                     fiction-writing-4
                   </option>
-                  <option value="Model:gpt-4o-mini-2024-07-18 API:openai System Message:Default">gpt-4o-mini-2024-07-18</option>
-                  <option value="Model:deepseek-chat API:deepseek System Message:Default">deepseek-chat</option>
+                  <option value="Model:gpt-4o-mini-2024-07-18 API:openai System Message:Default">
+                    gpt-4o-mini-2024-07-18
+                  </option>
+                  <option value="Model:gemini-2.0-flash-001 API:gemini System Message:Default">
+                    gemini-2.0-flash-001
+                  </option>
                 </select>
               </div>
             </div>
