--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -115,23 +115,17 @@
               <div class="select is-small">
                 <select id="model-select">
                   <option value="Model:gpt-4o-2024-11-20 API:openai System Message:Default">gpt-4o-2024-11-20</option>
-                  <option value="Model:gpt-4o-2024-08-06 API:openai System Message:Default">gpt-4o-2024-08-06</option>
-                  <option value="Model:gpt-4o-2024-05-13 API:openai System Message:Default">gpt-4o-2024-05-13</option>
-                  <option
-                    value="Model:ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-7:A0X18JAC API:openai System Message:Default"
-                  >
-                    fiction-writing-7
-                  </option>
-                  <option
-                    value="Model:ft:gpt-4o-mini-2024-07-18:fictionai:fiction-writing-4:9y3ECqcG API:openai System Message:Default"
-                  >
-                    fiction-writing-4
-                  </option>
-                  <option value="Model:gpt-4o-mini-2024-07-18 API:openai System Message:Default">
-                    gpt-4o-mini-2024-07-18
-                  </option>
+
                   <option value="Model:gemini-2.0-flash-001 API:gemini System Message:Default">
                     gemini-2.0-flash-001
+                  </option>
+                  <option value="Model:gemini-2.0-pro-exp-02-05 API:gemini System Message:Default">
+                    gemini-2.0-pro-exp-02-05
+                  </option>
+                  <option value="Model:gemini-1.5-pro-002 API:gemini System Message:Default">gemini-1.5-pro-002</option>
+
+                  <option value="Model:gpt-4o-mini-2024-07-18 API:openai System Message:Default">
+                    gpt-4o-mini-2024-07-18
                   </option>
                 </select>
               </div>
